// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-input-checkbox Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  disabled: true
}: 1`] = `
<mg-input-checkbox>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--checkbox">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--checkbox">
            <li class="mg-input__input-group">
              <input aria-describedby="" disabled="" id="identifier_0" name="identifier" type="checkbox" value="batman">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" disabled="" id="identifier_1" name="identifier" type="checkbox" value="robin">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" disabled="" id="identifier_2" name="identifier" type="checkbox" value="jocker">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" disabled="" id="identifier_3" name="identifier" type="checkbox" value="bane">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-checkbox>
`;

exports[`mg-input-checkbox Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  helpText: 'Hello jocker'
}: 1`] = `
<mg-input-checkbox>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--checkbox">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--checkbox">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" type="checkbox" value="batman">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="checkbox" value="robin">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" type="checkbox" value="jocker">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" type="checkbox" value="bane">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
        <div class="mg-input__input-container__help-text" id="identifier-help-text">
          Hello jocker
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-checkbox>
`;

exports[`mg-input-checkbox Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  inputVerticalList: true
}: 1`] = `
<mg-input-checkbox>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--checkbox">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--checkbox mg-input__input-group-container--vertical">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" type="checkbox" value="batman">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="checkbox" value="robin">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" type="checkbox" value="jocker">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" type="checkbox" value="bane">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-checkbox>
`;

exports[`mg-input-checkbox Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  labelColon: true
}: 1`] = `
<mg-input-checkbox>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--checkbox">
      <mg-input-title colon="" identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--checkbox">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" type="checkbox" value="batman">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="checkbox" value="robin">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" type="checkbox" value="jocker">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" type="checkbox" value="bane">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-checkbox>
`;

exports[`mg-input-checkbox Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  labelHide: true
}: 1`] = `
<mg-input-checkbox>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--checkbox">
      <mg-input-title class="sr-only" identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--checkbox">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" type="checkbox" value="batman">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="checkbox" value="robin">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" type="checkbox" value="jocker">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" type="checkbox" value="bane">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-checkbox>
`;

exports[`mg-input-checkbox Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  labelOnTop: true
}: 1`] = `
<mg-input-checkbox>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--checkbox mg-input--label-on-top">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--checkbox">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" type="checkbox" value="batman">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="checkbox" value="robin">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" type="checkbox" value="jocker">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" type="checkbox" value="bane">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-checkbox>
`;

exports[`mg-input-checkbox Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  readonly: true,
  value: [Array]
}: 1`] = `
<mg-input-checkbox>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--checkbox mg-input--readonly">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <strong>
          [object Object]
        </strong>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-checkbox>
`;

exports[`mg-input-checkbox Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  readonly: true,
  value: [Array]
}: 2`] = `
<mg-input-checkbox>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--checkbox mg-input--readonly">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <strong>
          batman, jocker.
        </strong>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-checkbox>
`;

exports[`mg-input-checkbox Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  required: true
}: 1`] = `
<mg-input-checkbox>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--checkbox">
      <mg-input-title identifier="identifier" is-legend="" required="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--checkbox">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" required="" type="checkbox" value="batman">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" required="" type="checkbox" value="robin">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" required="" type="checkbox" value="jocker">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" required="" type="checkbox" value="bane">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-checkbox>
`;

exports[`mg-input-checkbox Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  tooltip: 'My Tooltip Message'
}: 1`] = `
<mg-input-checkbox>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--checkbox">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--checkbox">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" type="checkbox" value="batman">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="checkbox" value="robin">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" type="checkbox" value="jocker">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" type="checkbox" value="bane">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon icon="info"></mg-icon>
          </mg-tooltip>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-checkbox>
`;

exports[`mg-input-checkbox Should render with args { label: 'label', identifier: 'identifier', items: [Array] }: 1`] = `
<mg-input-checkbox>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--checkbox">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--checkbox">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" type="checkbox" value="batman">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" name="identifier" type="checkbox" value="robin">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_2" name="identifier" type="checkbox" value="jocker">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" type="checkbox" value="bane">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-checkbox>
`;

exports[`mg-input-checkbox Should render with args { label: 'label', identifier: 'identifier', items: [Array] }: 2`] = `
<mg-input-checkbox>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--checkbox">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--checkbox">
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_0" name="identifier" type="checkbox" value="u">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_1" indeterminate="" name="identifier" type="checkbox" value="i">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" disabled="" id="identifier_2" name="identifier" type="checkbox" value="o">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="" id="identifier_3" name="identifier" type="checkbox" value="a">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-checkbox>
`;

exports[`mg-input-checkbox Should trigger events, case validity check false 1`] = `
<mg-input-checkbox>
  <mock:shadow-root>
    <fieldset class="is-focused mg-input mg-input--checkbox">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--checkbox">
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" checked="" id="identifier_0" name="identifier" type="checkbox" value="false">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" disabled="" id="identifier_1" name="identifier" type="checkbox" value="false">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_2" name="identifier" type="checkbox" value="false">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_3" name="identifier" type="checkbox" value="false">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
        <div class="mg-input__input-container__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-checkbox>
`;

exports[`mg-input-checkbox Should trigger events, case validity check true 1`] = `
<mg-input-checkbox>
  <mock:shadow-root>
    <fieldset class="is-focused mg-input mg-input--checkbox">
      <mg-input-title identifier="identifier" is-legend="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <ul class="mg-input__input-group-container mg-input__input-group-container--checkbox">
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_0" name="identifier" type="checkbox" value="false">
              <label htmlfor="identifier_0">
                batman
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_1" name="identifier" type="checkbox" value="true">
              <label htmlfor="identifier_1">
                robin
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_2" name="identifier" type="checkbox" value="false">
              <label htmlfor="identifier_2">
                jocker
              </label>
            </li>
            <li class="mg-input__input-group">
              <input aria-describedby="identifier-help-text" id="identifier_3" name="identifier" type="checkbox" value="false">
              <label htmlfor="identifier_3">
                bane
              </label>
            </li>
          </ul>
        </div>
        <div class="mg-input__input-container__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-checkbox>
`;
